# lumibeat

./: .gitignore  README.md  SECURITY.md  app.html  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  Cache.ts  EntryPointGloablConfigurations.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  menubar.rs
src/App/: App.css  App.tsx  AppEntryPoint.tsx  AppState.ts
src/App/AudioPlayer/: Audio.ts  AudioPlayer.ts
src/App/AudioVisualizer/: AudioVisualizer.css  AudioVisualizer.tsx
src/App/ContextMenu/: CueContextMenu.css  CueContextMenu.tsx
src/App/CueList/: ContextMenu.tsx  CueComponent.tsx  CueList.css  CueList.tsx  useOnClickAway.ts
src/App/DragDrop/: Draggable.tsx  DropTarget.tsx
src/App/Header/: Header.css  Header.tsx
src/App/HiddenInputComponent/: HiddenInputComponent.css  HiddenInputComponent.tsx
src/App/Hooks/: useAppWindowInfo.ts  useAutoSave.ts  useCatchAppClose.ts  useFormattedDuration.ts  useGetCueAudioPlayer.ts  useLoadApp.ts  (+3 more)
src/AudioPlayer/: AudioPlayer.ts
src/AudioVisualizer/: AudioVisualizer.css  AudioVisualizer.tsx
src/CueList/: CueLIst.tsx  CueList.css  StrictModeDroppable.tsx
src/Header/: Header.css  Header.tsx
src/Launcher/: Launcher.css  Launcher.tsx  LauncherEntryPoint.tsx
src/Project/: Project.ts  ProjectDataStructure.ts
src/Properties/: Properties.css  Properties.tsx
src/SplitPane/: SplitPane.css  SplitPane.tsx
src/StatusBar/: StatusBar.tsx
(+24 files in other folders)
