[package]
name = "lumibeat"
version = "1.0.0-prerelease"
description = "lumibeat"
authors = ["Nick Fanelli"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [ "protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-dialog = "2.0.0-beta.3"
tauri-plugin-fs = "2.0.0-beta.3"
tauri-plugin-app = "2.0.0-alpha.2"
tauri-plugin-shell = "2.0.0-beta.3"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4"                # Lets you generate random UUIDs
]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "lumibeat_lib"
crate-type = ["staticlib", "cdylib", "lib"] # Removed rlib
